--- a/lowwer_computer/LowwerController/.vscode/settings.json
+++ b/lowwer_computer/LowwerController/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cortex-debug.armToolchainPath": "/usr/bin",
     "cortex-debug.openocdPath": "/usr/bin/openocd",
     "files.associations": {
-        "motor_ctrl.h": "c"
+        "motor_ctrl.h": "c",
+        "math.h": "c"
     }
 }
